--- a/Employee-Management-System/nbproject/project.properties
+++ b/Employee-Management-System/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Employee Management System
+application.vendor=a_bh_i_007
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,16 +33,21 @@ dist.jar=${dist.dir}/Employee_Management_System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Employee_Management_System
+endorsed.classpath=
 excludes=
-file.reference.jcalendar-tz-1.3.3-4.jar=E:\\JAVA\\jcalendar-tz-1.3.3-4.jar
-file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\ooo\\Downloads\\mysql-connector-java-8.0.28.jar
-file.reference.rs2xml.jar=E:\\JAVA\\rs2xml.jar
+file.reference.jcalendar-tz-1.3.3-4.jar=D:\\jcalendar-tz-1.3.3-4.jar
+file.reference.jcalendar-tz-1.3.3-4.jar-1=C:\\Users\\abhil\\Downloads\\jcalendar-tz-1.3.3-4.jar
+file.reference.mysql-connector-java-8.0.28.jar=D:\\mysql-connector-java-8.0.28.jar
+file.reference.MySQL_Drivers.jar=C:\\Users\\abhil\\Downloads\\JDBC Softwares\\JDBC Softwares\\MySQL_Drivers.jar
+file.reference.rs2xml__1_.jar=D:\\rs2xml (1).jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.jcalendar-tz-1.3.3-4.jar-1}:\
+    ${file.reference.MySQL_Drivers.jar}:\
+    ${file.reference.rs2xml__1_.jar}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
-    ${file.reference.jcalendar-tz-1.3.3-4.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.jcalendar-tz-1.3.3-4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,6 +73,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.jcalendar-tz-1.3.3-4.jar-1=C:\\Users\\abhil\\Downloads\\mysql-connector-java-8.0.28.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -77,7 +84,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Employee_Management_System
-main.class=employee.management.system.EmployeeManagementSystem
+main.class=employee.management.system.Splash
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
