--- a/Employee-Management-System/nbproject/project.properties
+++ b/Employee-Management-System/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Employee Management System
+application.title=EmployeeManagementSystem
 application.vendor=a_bh_i_007
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Employee_Management_System.jar
+dist.jar=${dist.dir}/EmployeeManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Employee_Management_System
+dist.jlink.output=${dist.jlink.dir}/EmployeeManagementSystem
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-tz-1.3.3-4.jar=D:\\jcalendar-tz-1.3.3-4.jar
@@ -83,8 +83,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Employee_Management_System
-main.class=employee.management.system.Splash
+jlink.launcher.name=EmployeeManagementSystem
+main.class=employee.management.system.FirstPage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
